k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linksnap-backend-service
spec:
  selector:
    app: linksnap-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
