k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linksnap-frontend-service
spec:
  selector:
    app: linksnap-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
